# v0.2

./: .gitignore  CMakeLists.txt  README.md  clear.sh
dependencies/cmake/: directx.cmake  fix-policy.cmake  uvatlas.cmake
dependencies/cmake/fakepkg/: directxmath-config.cmake
dependencies/directx-headers/: .gitignore  CMakePresets.json
dependencies/directx-headers/test/: CMakeLists.txt  test.cpp
dependencies/directx-math/Inc/: DirectXMathMatrix.inl  DirectXMathMisc.inl  DirectXMathVector.inl
dependencies/directx-math/SHMath/: DirectXSH.cpp
dependencies/directx-math/Stereo3D/: Stereo3DMatrixHelper.cpp
dependencies/directx-mesh/: CMakeLists.txt
dependencies/directx-mesh/DirectXMesh/: DirectXMeshClean.cpp  DirectXMeshOptimizeLRU.cpp  DirectXMeshP.h  DirectXMeshletGenerator.cpp
dependencies/draco/: config
dependencies/draco/src/draco/io/: stdio_file_reader.cc  stdio_file_writer.cc
dependencies/hpm-HPM-15.0/: CMakeLists.txt
dependencies/hpm-HPM-15.0/app/: app_util.h
dependencies/hpm-HPM-15.0/src/: enc_temporalFilter.c
dependencies/nanoflann/: KDTreeVectorOfVectorsAdaptor.h  nanoflann.hpp
dependencies/patches/uvatlas/: uvatlas-0001-uvatlas-eliminate-non-determinism-by-using-default-p.patch  uvatlas-0002-fix-unstability.patch  uvatlas-0003-enhanced-eigenvalues-precision.patch  uvatlas-0004-fix-unstability-continued.patch  uvatlas-0005-fix-sorting-functions-for-clang.patch
dependencies/sal/: README.md  sal.h
dependencies/uvatlas/: CMakeLists.txt
dependencies/uvatlas/UVAtlas/geodesics/: ApproximateOneToAll.cpp  ExactOneToAll.cpp  datatypes.h  mathutils.cpp
dependencies/uvatlas/UVAtlas/isochart/: SymmetricMatrix.hpp  UVAtlas.cpp  UVAtlasRepacker.cpp  barycentricparam.cpp  imtcomputation.cpp  isochartengine.cpp  isochartmesh.cpp  isochartutil.cpp  isochartutil.h  isomap.cpp  meshcommon.inl  meshoptimizeboundaries.cpp  meshoptimizestretch.cpp  meshpartitionchart.cpp  packingcharts.cpp  progressivemesh.cpp  sparsematrix.hpp
source/app/: CMakeLists.txt  decode.cpp  encode.cpp
source/lib/common/: CMakeLists.txt  comBacCore.h  comBitStream.cpp  comBitStream.h  comRom.cpp  comRom.h  commonDef.h  contextModel.h  image.cpp  image.hpp  kdtree.hpp  matrix.hpp  mesh.cpp  mesh.hpp  misc.hpp  mutablePriorityHeap.hpp  sparseMatrix.hpp  triangle.hpp  vector.hpp
source/lib/decoder/: CMakeLists.txt  decBacCore.cpp  decBacCore.h  decBacTop.cpp  decBacTop.h  decoder.cpp  decoder.hpp  draco_decoder.cpp  hpm_decoder.c
source/lib/encoder/: CMakeLists.txt  draco_encoder.cpp  encBacCore.cpp  encBacCore.h  encBacTop.cpp  encBacTop.h  encoder.cpp  encoder.hpp  geometryDecimate.cpp  geometryDecimate.hpp  geometryParametrization.cpp  geometryParametrization.hpp  hpm_encoder.c  textureParametrization.cpp  textureParametrization.hpp  transferColor.cpp  transferColor.hpp
